# cyberalertx

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cyberalertx/: __init__.py  config.py  main.py  models.py
cyberalertx/ai/: __init__.py  cache.py  config.py  detail_context.py  editorial.py  generator.py  models.py  provider.py  references.py  rule_based.py  templates.py  uk_glossary.py  validation.py
cyberalertx/api/: __init__.py  app.py
cyberalertx/observability/: __init__.py  metrics.py  source_health.py
cyberalertx/sources/: base.py  (+2 more)
docs/: architecture.md  telegram-publisher-discovery.md
frontend/: .env.local.example  .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
server/: README.md  backup.sh  deploy.sh  setup.sh
tests/: test_actionability.py  test_ai_generator.py  test_ai_journalist.py  test_ai_offline_mode.py  test_ai_rule_based.py  test_ai_templates.py  test_ai_variation.py  test_api.py  test_article_cleanup.py  test_audience.py  test_category.py  test_claude_cli_provider.py  test_credibility.py  test_editorial.py  test_editorial_brief.py  test_filter.py  test_normalize.py  test_observability.py  test_pg_live.py  test_pg_serializers.py  test_pg_threat_cache.py  test_platforms.py  test_ranker.py  test_references.py  test_relevance_filter.py  test_storage_compat.py  test_storage_dual_write.py  test_storage_factory.py  test_store.py  test_telegram_publish.py  test_threat_signals.py  test_uk_glossary.py
(+102 files in other folders)
